Migrate some compat over to use IngredientStack